@@ -28,7 +28,7 @@ autotrash_import_error=Invalid AutoTrash configuration. Only blueprints/strings 
 autotrash_request_blueprint=Request blueprint
 autotrash_no_character=Auto Trash: No character, closing gui
 autotrash_invalid_gui=Auto Trash: The GUI has become invalid. This likely means that another mod tampered with it.
-
+autotrash_main_button_tt=__CONTROL_STYLE_BEGIN__Ctrl + Right click __CONTROL_STYLE_END__ to toggle the status display.\nStatus display: __1__
 
 autotrash_quick_actions_tt=Quick actions apply to all items
 autotrash_quick_actions=Quick actions
