@@ -107,6 +107,14 @@ local migrations = {
             at_gui.open_status_display(player, pdata)
         end
     end,
+    ["5.2.9"] = function()
+        for player_index, player in pairs(game.players) do
+            local pdata = global._pdata[player_index]
+            if pdata and pdata.gui and pdata.gui.mod_gui and pdata.gui.mod_gui.button and pdata.gui.mod_gui.button.valid then
+                pdata.gui.mod_gui.button.tooltip = {"autotrash_main_button_tt", pdata.flags.status_display_open and "On" or "Off"}
+            end
+        end
+    end
 }
 
 return migrations
